# trade-risk-engine

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  issue_url.txt  package-lock.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  lint.yml  pypi-publish.yml  release.yml
docs/: package-boundary.md
src/trade_risk_engine/: __init__.py  engine.py  gates.py  state.py  webhook.py
tests/: test_coverage_gap.py  test_precision_drift.py  test_property.py  test_risk_engine_enrichments.py
typings/msgspec/: __init__.pyi  json.pyi
