[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-risk-engine"
version = "0.1.0"
description = "Zero-allocation absolute drawdown mathematics evaluators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hypothesis"]

[tool.hatch.build.targets.wheel]
packages = ["src/trade_risk_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
